--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
       }
     </style>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="We are a group of teenagers who noticed that there are some negative habits and things happening in our environment that need to be reformed, and since we strongly believe that the change has to come from within, we wanted to do it through this nonprofit club in November 2019. Everyone is welcome to be a member of this family ❤"
+    />
+    <meta name="keywords" content="lach, lachclub, lach.club, LACH, LACHCLUB" />
+    <meta name="author" content="LACH club" />
+    <meta property="og:title" content="LACH Club!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.lachclub.tn/" />
+    <meta property="og:image" content="<%= BASE_URL %>og.png" />
+    <meta
+      property="og:description"
+      content="We are a group of teenagers who noticed that there are some negative habits and things happening in our environment that need to be reformed, and since we strongly believe that the change has to come from within, we wanted to do it through this nonprofit club in November 2019. Everyone is welcome to be a member of this family ❤"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
